@@ -45,7 +45,7 @@
     <pdfbox.version>2.0.4</pdfbox.version>
     <jempbox.version>1.8.12</jempbox.version>
     <netcdf-java.version>4.5.5</netcdf-java.version>
-    <cxf.version>3.0.3</cxf.version>
+    <cxf.version>3.0.12</cxf.version>
     <sis.version>0.6</sis.version>
     <!-- used by POI, PDFBox and Jackcess ...try to sync -->
     <bouncycastle.version>1.54</bouncycastle.version>
