@@ -29,7 +29,7 @@
   <url>http://tika.apache.org/</url>
 
   <properties>
-    <cxf.version>3.0.3</cxf.version>
+    <cxf.version>3.0.12</cxf.version>
   </properties>
 
   <pluginRepositories>
